# hiperhealth

./: .gitignore  .makim.yaml  .releaserc.json  DEVELOPMENT.md  README.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yaml  main.yaml  release.yaml
conda/: dev-win.yaml  dev.yaml
docs/: index.md  installation.md
research/app/: main.py  reports.py
research/app/templates/: tests.html  wearable.html
research/backend/: cli.py
research/backend/app/: database.py  main.py  reports.py  schemas.py
research/backend/app/models/: repositories.py
research/backend/app/templates/: base.html  dashboard.html  demographics.html  diagnosis.html  done.html  exams.html  language.html  lifestyle.html  mental.html  patient.html  symptoms.html  tests.html  wearable.html
research/backend/data/llm_raw/: 20251215T061132Z_a9cebe1f-e775-44b2-ab34-e799d3dbb9b5.json  20251218T072744Z_6fc07507-a968-47ab-a69b-12bf99b7c347.json  20251218T073022Z_a9cebe1f-e775-44b2-ab34-e799d3dbb9b5.json  20251218T075224Z_a9cebe1f-e775-44b2-ab34-e799d3dbb9b5.json  20251218T140158Z_a9cebe1f-e775-44b2-ab34-e799d3dbb9b5.json
research/backend/models/: repositories.py  ui.py
research/backend/schema/: __init__.py  ui.py
research/frontend/: README.md  index.html  package-lock.json  package.json
research/frontend/src/: App.jsx  api.js  i18.js  main.jsx
research/frontend/src/components/: Dashboard.jsx  LanguageSelection.jsx  Navbar.jsx  PatientView.jsx  StepOne.jsx  StepThree.jsx  StepTwo.jsx
research/frontend/src/components/consultation/: Completion.jsx  Confirmation.jsx  Demographics.jsx  Diagnosis.jsx  Exam.jsx  LanguageSelection.jsx  Lifestyle.jsx  MedicalReport.jsx  Mental.jsx  Symptoms.jsx  Wearable.jsx
research/frontend/src/components/dashboard/: Dashboard.jsx  PatientView.jsx
research/frontend/src/context/: ConsultationContext.jsx  ConsultationReducer.js
research/frontend/src/i18n/: en.json  es.json
research/frontend/src/services/: api.js
scripts/: build.sh  install-dev.sh  publish.sh
src/hiperhealth/agents/extraction/: wearable.py
tests/: conftest.py  test_deidentifier.py  test_repositories.py
